# openiso

./: .gitignore  CMakeLists.txt  OpenISO.cpp  OpenISO.h  cmake_bridge.h.in  debug.cpp  debug.hpp  instance.cpp  instance.hh  ptr_owner.hh  resourcepath.h  room.hh  sdl_kbstate.cpp  sdl_kbstate.hh  structures.hh  texture.h  tilemap.cpp  tilemap.hh  widget.hh
game/: CMakeLists.txt  game.cpp  game.h
game/res/: roman.csv
game/res/tilemaps/: Boonie.tsx  roman.tmx
lib/x64/: SDL2main.lib
